# ce_portal

./: .gitignore  Readme.md  manage.py  pyproject.toml  run.py
blog/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_news_author.py  0003_remove_category_approved_remove_category_level_and_more.py  0004_remove_category_image.py  0005_alter_news_slug.py  0006_newslikes.py
books/: admin.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_category_book_category.py
ce_portal/: asgi.py  middleware.py  urls.py  views.py  wsgi.py
ce_portal/settings/: backends.py  base.py  editor_conf.py  filer.py  secretballot.py  taggit.py
events/: models.py
feedback/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
feedback/migrations/: 0001_initial.py  0002_alter_feedbackcategory_options_and_more.py  0002_alter_releasedemployeeidea_employee.py  0003_alter_feedback_type.py  0003_remove_releasedemployeeidea_employee_and_more.py  0004_alter_feedback_author_and_more.py  0004_alter_feedback_type_ideafeedback.py  0005_alter_feedback_status_alter_feedback_type_and_more.py  0005_ideapage_releasedemployeeidea.py  0006_alter_ideafeedback_options_alter_ideapage_options_and_more.py  0007_remove_releasedemployeeidea_image_and_more.py
organization/: admin.py  apps.py  models.py  urls.py  views.py
organization/api/: urls.py  v1.py
organization/employees/: admin.py  apps.py  froms.py  models.py  urls.py  views.py
organization/migrations/: 0001_initial.py  0002_city.py  0002_organizationconfig.py  0003_alter_city_options.py  0003_phraseday_alter_organizationconfig_description_and_more.py  0004_alter_department_options_alter_filial_options_and_more.py  0004_organizationconfig_ideas_email.py  0005_alter_phraseforhomepage_options_and_more.py  0006_organizationconfig_default_img_and_more.py  0007_organizationconfig_director_feedback_email_and_more.py  0008_banner.py  0009_alter_banner_options_alter_banner_description_and_more.py  0010_banner_background_color_alter_banner_description_and_more.py  0011_banner_type.py  (+3 more)
polls/: admin.py  apps.py  models.py  urls.py  views.py
templates/: about.html  bank_ideas.html  bank_ideas_detail.html  base.html  breadcrumbs.html  header.html  home.html  pagination.html  profile.html  sidebar.html
utils/: admin.py  forms.py  mptt_view.py
(+116 files in other folders)
